[package]
name = "elefont"
version = "0.1.0"
authors = ["Ryan Goldstein <ryan@ryanisaacg.com>"]
edition = "2018"

[features]
std = []

[dependencies]
hashbrown = { version = "0.7.1", default-features = false, features = ["ahash"] }
image = { version = "0.22", default-features = false, optional = true }
rusttype = { version = "0.8", optional = true }
unicode-normalization = { version = "0.1.12", optional = true }
