[package]
name = "elefont"
description = "A library that handles caching rendered glyphs on the GPU"
version = "0.1.3"
authors = ["Ryan Goldstein <ryan@ryanisaacg.com>"]
edition = "2018"
categories = ["text-processing"]
keywords = ["font", "font-cache"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ryanisaacg/elefont"

[package.metadata.docs.rs]
features = ["image", "rusttype"]

[features]
std = []

[dependencies]
hashbrown = { version = "0.7.1", default-features = false, features = ["ahash"] }
image = { version = "0.22", default-features = false, optional = true }
rusttype = { version = "0.8", optional = true }
unicode-normalization = { version = "0.1.12", optional = true }

[[example]]
name = "render_image"
required-features = ["image", "rusttype"]
